[package]
name = "phidget"
version = "0.1.2"
edition = "2021"
rust-version = "1.63"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>", "Will <wlwatkins@pm.me>"]
repository = "https://github.com/fpagliughi/phidget-rs"
license = "MIT"
readme = "README.md"
keywords = ["linux", "embedded", "analog", "iio", "windows"]
categories = ["embedded", "hardware-support", "science::robotics"]
description = """
Phidget library for Rust
"""

[features]
default = ["utils"]
utils = ["anyhow", "ctrlc"]

[dependencies]
phidget-sys = { version = "0.1.1", path = "phidget-sys" }
anyhow = { version = "1.0", optional = true }
ctrlc = { version = "3.2", features = [ "termination" ], optional = true }

[dev-dependencies]
anyhow = "1.0"
ctrlc = { version = "3.2", features = [ "termination" ] }

[[bin]]
name = "phidget"
required-features = ["utils"]
