[package]
name = "phidget"
version = "0.3.0-pre.0"
edition = "2021"
rust-version = "1.73"
authors = [
    "Frank Pagliughi <fpagliughi@mindspring.com>", 
    "wlwatkins <wlwatkins@pm.me>"
]
repository = "https://github.com/fpagliughi/phidget-rs"
license = "MIT"
readme = "README.md"
keywords = ["embedded"]
categories = ["embedded", "hardware-support", "science::robotics"]
description = """
Phidget library for Rust.
"""

[features]
default = ["utils"]
utils = ["anyhow", "clap", "ctrlc"]
serde = ["dep:serde", "serde_json"]

[dependencies]
phidget-sys = { version = "0.1", path = "phidget-sys" }
anyhow = { version = "1.0", optional = true }
clap = { version = "3.2", optional = true }
ctrlc = { version = "3.2", features = [ "termination" ], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1.0"
clap = "3.2"
ctrlc = { version = "3.2", features = [ "termination" ] }

[[bin]]
name = "phidget"
required-features = ["utils"]
