[package]
name = "phidget-sys"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/phidget-rs/phidget-sys"
license = "MIT"
readme = "README.md"
keywords = ["linux", "embedded", "analog", "iio"]
categories = ["embedded", "hardware-support"]
description = """
Low-level, unsafe, Rust wrapper for the phidget22 library.
"""

[dependencies]


